# projectAssignment

./: CMakeLists.txt  launch.json  tasks.json
src/: main.cpp
tests/: cTest.cpp
